Nav is fixed and chat is aligned everywhere.

--- a/client/src/style/_Media.scss
+++ b/client/src/style/_Media.scss
@@ -20,7 +20,7 @@
   // Header without video
   .chat-routes-without-video {
     position: fixed;
-    top: 15px;
+    top: 13px;
   }
 }
 
