--- a/client/src/style/_Variables.scss
+++ b/client/src/style/_Variables.scss
@@ -1,7 +1,7 @@
 // height
 $header-height-big: 190px;
-$header-height-small: 14vh;
-$nav-height: 6vh;
+$header-height-small: 115px;
+$nav-height: 60px;
 $embeded-video-height: 88vh;
 $mobile-header-height: 130px;
 
